# olist-ecommerce-data-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py  test_logger.py  test_readers.py  test_spark.py
configs/: dev.yaml  prod.yaml
contracts/: olist_customers_v1.json  olist_geolocation_v1.json  olist_order_items_v1.json  olist_orders_v1.json  olist_payments_v1.json  olist_products_v1.json  olist_reviews_v1.json  olist_sellers_v1.json
data/olist/sample/: olist_order_reviews_dataset.csv
docs/: data_model.md
resources/jobs/: bronze_ingestion.yml
src/data_io/: readers.py  writers.py
src/jobs/: base_job.py  entrypoints.py
src/jobs/ingestion/: bronze_base_job.py  bronze_customers_job.py  bronze_geolocation_job.py  bronze_order_items_job.py  bronze_orders_job.py  bronze_payments_job.py  bronze_products_job.py  bronze_reviews_job.py  bronze_sellers_job.py
src/quality/: quarantine.py
src/schemas/: registry.py
src/utils/: config.py  logger.py  spark_utils.py
tests/: conftest.py
tests/integration/: test_bronze_orders.py
tests/unit/: test_quarantine.py  test_schema_registry.py
